--- a/src/Components/UI/Button/Button.module.css
+++ b/src/Components/UI/Button/Button.module.css
@@ -3,6 +3,7 @@
     min-height: 40px;
     min-width: 100px;
     border-radius: 30px 5px;
+    border: solid thin #000;
     display: inline-block;
     cursor: pointer;
     
@@ -16,7 +17,7 @@
 .confirmButton {
     background-color: #00af91;
     color: white;
-    border: solid thin #007965;
+    border-color: #007965;
 }
 
 .confirmButton:hover{
@@ -26,9 +27,17 @@
 .rejectButton {
     background-color: #ce1212;
     color: white;
-    border: solid thin #810000;
+    border-color: #810000;
 }
 
 .rejectButton:hover{
     background-color: #810000;
+}
+
+.disable, .disable:hover {
+    border-radius: 30px 30px;
+    background-color: #bbb;
+    color: #555;
+    border-color: #777;   
+    cursor: not-allowed;
 }
