Table Component: EditClientSide/AddServerSide Paging

--- a/src/Components/UI/TabLink/TabLink.module.css
+++ b/src/Components/UI/TabLink/TabLink.module.css
@@ -1,6 +1,6 @@
 .tablink{
     text-decoration: none;
-    color: #444;
+    color: #aaa;
     border: solid thin #aaa;
     padding: 15px;
     border-radius: 5px 30px;
