--- a/src/Components/UI/Table/Table.module.css
+++ b/src/Components/UI/Table/Table.module.css
@@ -21,20 +21,10 @@
     color: #000;
 }
 
+.sortableHeader:hover{
+    background-color: #132c33;
+}
+
 .table tbody tr:last-child{
     border-bottom: solid 7px #2b4f60;
-}
-
-.sortingButton{
-    border-radius: 50%;
-    border: solid thin #ead3cb;
-    padding: 5px;
-    margin-right: 10px;
-    background-color: #ead3cb;
-}
-
-.sortingButton:hover{
-    background-color: #845460;
-    border-color: #845460;
-    color: #fff;
 }
