--- a/src/Container/SignUp/SignUp.module.css
+++ b/src/Container/SignUp/SignUp.module.css
@@ -4,7 +4,14 @@
     border: solid thin #aaa;
     border-radius: 30px 5px;
     padding: 20px;
+}
+
+.light {
     background-color: #f5f5f5;
+}
+
+.dark {
+    background-color: #7f7e90;
 }
 
 .formLabel{
