add OrderDetail page

--- a/src/Components/UI/Button/Button.module.css
+++ b/src/Components/UI/Button/Button.module.css
@@ -6,6 +6,7 @@
     border: solid thin #000;
     display: inline-block;
     cursor: pointer;
+    padding: 10px;
     
     transition: all 0.5s;
 }
