--- a/src/Container/OrderDetail/OrderDetail.module.css
+++ b/src/Container/OrderDetail/OrderDetail.module.css
@@ -3,32 +3,22 @@
 }
 
 .container{
-    text-align: center;
+    margin: 20px auto;
+    width: 50%;
+    border: solid thin #aaa;
+    border-radius: 30px 5px;
+    padding: 20px;
+    box-sizing: border-box;
 }
 
-.table{
-    margin: 25px auto;
-    border-collapse: collapse;
+.light{
+    background-color: #f5f5f5;
 }
 
-.table thead tr th{
-    border: solid thin #cdc7be;
-    background-color: #766161;
-    padding: 10px;
-    color: #fff;
+.dark {
+    background-color: #7f7e90;
 }
 
-.table tbody tr td{
-    border: solid thin #cdc7be;
-    background-color: #f0ebcc;
-    padding: 10px;
-    color: #000;
-}
-
-
-.table tbody tr:last-child{
-    border-bottom: solid 7px #766161;
-}
 
 .input {
     border: solid thin #cdc7be;
